updated readme and added settings for dynamic port

--- a/manifest.yml
+++ b/manifest.yml
@@ -10,6 +10,6 @@ applications:
   env:
     NODE_ENV: PRODUCTION
 #   services:
-#    - bot_keys
-# pcf ready manifest file
+#    - any service
+
     
